chore: update Android Gradle plugin and Kotlin version in build.gradle and settings.gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,12 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    buildscript {
+        dependencies {
+            classpath 'com.android.tools.build:gradle:8.2.2'
+        }
+    }
 }
 
 rootProject.buildDir = "../build"
