--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.8.0+1
   provider: ^6.1.1
   connectivity_plus: ^5.0.2
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
