--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   connectivity_plus: ^5.0.2
   lottie: ^3.3.1
   google_fonts: ^6.1.0
+  camera: ^0.10.5+2
+
 
 dev_dependencies:
   flutter_test:
