--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.4.0
   dio: ^5.8.0+1
-  provider: ^6.1.1
+  provider: ^6.1.2
   connectivity_plus: ^5.0.2
   lottie: ^3.3.1
   google_fonts: ^6.1.0
-  camera: ^0.10.5+2
-
+  camerawesome: ^2.1.0
 
 dev_dependencies:
   flutter_test:
